Mon Apr 14 14:16:35 2003  Pradeep Gore  <pradeep@oomworks.com>

	* orbsvcs/orbsvcs/Notify/RT_Factory.cpp:
	  Defined virtual base class methods to stop Suncc/HPUX ACC339
	  compiler warnings.Thanks to David Smith <dts@prismtechnologies.com>
	  for bringing this to attention.
  
Mon Apr 14 11:24:53 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/IIOP_Profile.cpp:
	* tao/Strategies/DIOP_Profile.cpp:
	* tao/Strategies/SHMIOP_Profile.cpp:
	* tao/Strategies/UIOP_Profile.cpp: A blunder cause by moving the
	  pointer 4 bytes ahead in parse_string_i () caused lots of tests
	  to fail in TAO. The pointer shift is not required, since
	  TAO_Profile::parse_string () itself moves the pointer ahead at
	  the right place before calling parse_string_i () on the concrete
	  profile implementations.

Mon Apr 14 15:02:25 2003  Simon McQueen  <sm@prismtechnologies.com>

	* tests/OBV/TC_Alignment/client.dsp:
	* tests/OBV/TC_Alignment/client.dsp:
	  Fixed custom build dependencies in release configuration.

Mon Apr 14 14:07:18 2003  Simon McQueen  <sm@prismtechnologies.com>

	* orbsvcs/tests/Bug_1395_Regression/client.dsp:
	* orbsvcs/tests/Bug_1395_Regression/server.dsp:
	  Fixed mpc generated incorrect output file entry in release
	  configuration.

Mon Apr 14 06:56:12 2003  Chad Elliott  <elliott_c@ociweb.com>

        * examples/mfc/client.mpc:
        * examples/mfc/mfc.mwc:
        * examples/mfc/server.mpc:
        * orbsvcs/performance-tests/RTEvent/lib/RTEC_Perf.mpc:

          Added mpc files for these projects.

        * orbsvcs/orbsvcs/DsLogAdmin.mpc:

          Fixed the library list for this mpc file.

Mon Apr 14 11:52:30 2003  Dave Smith  <dts@prismtechnologies.com>

        * orbsvcs/PSS/PSDL_Datastore.cpp:
          For HPUX11, replaced the call to the ACE_NEW_RETURN macro with
          its expansion, as the call seems to confuse the compiler

2003-04-14    <dts@axwell>

        * orbsvcs/tests/Notify/RT_lib/RT_POA_Command.h